k8s/base/crypto/rtl/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,2001:559:87dd::/48
  labels:
    app.kubernetes.io/instance: rtl
    app.kubernetes.io/name: rtl
  name: rtl
  namespace: crypto
spec:
  ingressClassName: nginx
  rules:
  - host: rtl.scr1.rabbito.tech
    http:
      paths:
      - backend:
          service:
            name: rtl
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rtl.scr1.rabbito.tech
    secretName: rtl-tls
